<?xml version="1.0"?>
<package format="3">
  <name>foxglove_sdk_vendor</name>
  <version>0.2.0</version>
  <description>
    Vendor package that fetches prebuilt Foxglove SDK archives and exposes the headers
    and libfoxglove.a static library to ROS 2 workspaces.
  </description>
  <maintainer email="jlack1987@gmail.com">Jordan Lack</maintainer>
  <license>MIT</license>
  <url type="website">https://docs.foxglove.dev/docs/sdk</url>
  <url type="repository">https://github.com/foxglove/foxglove-sdk</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
